--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -256,34 +256,34 @@
         [<input class="info-input" type="text" id="text-brain" placeholder="내용 입력" style="flex: 1;" />]
       </label>
       <label class="disease-item">
-        <input type="checkbox" id="disease-brain" value="고지혈증" />
+        <input type="checkbox" id="disease-hyperlipidemia" value="고지혈증" />
         고지혈증
-        [<input class="info-input" type="text" id="text-brain" placeholder="내용 입력" style="flex: 1;" />]
+        [<input class="info-input" type="text" id="text-hyperlipidemia" placeholder="내용 입력" style="flex: 1;" />]
       </label>
       <label class="disease-item">
-        <input type="checkbox" id="disease-brain" value="결핵" />
+        <input type="checkbox" id="disease-tuberculosis" value="결핵" />
         결핵
-        [<input class="info-input" type="text" id="text-brain" placeholder="내용 입력" style="flex: 1;" />]
+        [<input class="info-input" type="text" id="text-tuberculosis" placeholder="내용 입력" style="flex: 1;" />]
       </label>
       <label class="disease-item">
-        <input type="checkbox" id="disease-brain" value="천식" />
+        <input type="checkbox" id="disease-asthma" value="천식" />
         천식
-        [<input class="info-input" type="text" id="text-brain" placeholder="내용 입력" style="flex: 1;" />]
+        [<input class="info-input" type="text" id="text-asthma" placeholder="내용 입력" style="flex: 1;" />]
       </label>
       <label class="disease-item">
-        <input type="checkbox" id="disease-brain" value="간염" />
+        <input type="checkbox" id="disease-hepatitis" value="간염" />
         간염
-        [<input class="info-input" type="text" id="text-brain" placeholder="내용 입력" style="flex: 1;" />]
+        [<input class="info-input" type="text" id="text-hepatitis" placeholder="내용 입력" style="flex: 1;" />]
       </label>
       <label class="disease-item">
-        <input type="checkbox" id="disease-brain" value="암" />
+        <input type="checkbox" id="disease-cancer" value="암" />
         암
-        [<input class="info-input" type="text" id="text-brain" placeholder="내용 입력" style="flex: 1;" />]
+        [<input class="info-input" type="text" id="text-cancer" placeholder="내용 입력" style="flex: 1;" />]
       </label>
       <label class="disease-item">
-        <input type="checkbox" id="disease-brain" value="알레르기" />
+        <input type="checkbox" id="disease-allergy" value="알레르기" />
         알레르기
-        [<input class="info-input" type="text" id="text-brain" placeholder="내용 입력" style="flex: 1;" />]
+        [<input class="info-input" type="text" id="text-allergy" placeholder="내용 입력" style="flex: 1;" />]
       </label>
       <label class="disease-item">
         <input type="checkbox" id="disease-etc" value="기타" />
